infra/k8s/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: tickests-microservice/auth
          resources:
            limits:
              memory: "1024Mi"
              cpu: "1.0"
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  selector:
    app: auth
  ports:
    - port: 3000
      targetPort: 3000
