infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    name: auth
spec:
  rules:
    - host: ticketz.dev
      http:
        paths:
          - pathType: Prefix
            path: /api/users/?(.*)
            backend:
              service:
                name: auth
                port:
                  number: 3000
          - pathType: Prefix
            path: /?(.*)
            backend:
              service:
                name: client
                port:
                  number: 3000
